# JabberTTS

./: .gitignore  AUDIO_QUALITY_IMPROVEMENT_REPORT.md  AUDIO_QUALITY_REMEDIATION_COMPLETE.md  AUDIO_QUALITY_RESOLUTION_SUMMARY.md  AUDIO_QUALITY_ROOT_CAUSE_ANALYSIS.md  COMPREHENSIVE_AUDIT_FINAL_REPORT.md  COMPREHENSIVE_TTS_ENHANCEMENT_SUMMARY.md  Dockerfile  INVESTIGATION_SUMMARY.md  Multi-model_TTS_architecture_implementation_progress__2025-09-05T21-14-50.md  PERFORMANCE_VALIDATION_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PROGRESS_REPORT.md  README.md  Tasks_2025-09-05T05-34-39.md  Tasks_2025-09-05T18-58-57.md  advanced_performance_optimization.py  app.py  audio_analysis_test_results.json  audio_format_investigation.py  audio_quality_investigation.py  audio_quality_test_results.json  comprehensive_performance_audit.py  critical_performance_fixes.py  docker-compose.yml  final_performance_validation.py  human_listening_test.py  inference_timing_stuttering_test.py  intelligibility_framework_validation.json  manual_audio_assessment.py  model_switching_optimization.py  perceptual_quality_validation.json  performance_audit_analysis.py  phonemization_stuttering_test.py  pyproject.toml  simple_perceptual_test.py  simple_perceptual_test_results.json  stuttering_investigation.py  test_audio_quality.py  test_audio_quality_comprehensive.py  (+7 more)
audio_analysis_results/: AUDIO_QUALITY_INVESTIGATION_SUMMARY.md  audio_quality_investigation_results.json
audio_format_investigation/: AUDIO_FORMAT_INVESTIGATION_SUMMARY.md  audio_format_investigation_results.json
config/: override.example.json  override.json  settings.json
docs/: BUG_FIXES_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CORE_PLANNING_TASKS.md  INSTRUCTIONS.md  INSTRUCTIONS.md~  PLAN.md  PLAN.md~  PRD.md  PROJECT_ANALYSIS_SUMMARY.md  REFERENCE.md  REFERENCE.md~  REFERENCE_IMPLEMENTATION_ANALYSIS_SUMMARY.md  RESEARCH.md  SPEC.md  TASKS.md  TECHNICAL_DOCUMENTATION_TASKS.md  TESTING.md  TTS_TECHNOLOGY_RESEARCH_REPORT.md  VALIDATION.md
docs/debug/: whisper-stt-integration.md
docs/testing/: perceptual-quality-framework.md
human_listening_test/: HUMAN_EVALUATION_INSTRUCTIONS.md  test_results.json
inference_timing_stuttering_test/: INFERENCE_TIMING_STUTTERING_SUMMARY.md  inference_timing_stuttering_results.json
jabbertts/: __init__.py  config.py  main.py  metrics.py
jabbertts/api/: __init__.py  models.py  routes.py
jabbertts/audio/: __init__.py  advanced_speed_control.py  processor.py
jabbertts/caching/: multilevel_cache.py
jabbertts/dashboard/: __init__.py  routes.py
jabbertts/dashboard/templates/: dashboard.html
jabbertts/inference/: __init__.py  engine.py  preprocessing.py
jabbertts/models/: __init__.py  base.py  manager.py  openaudio.py  speecht5.py
jabbertts/optimization/: hardware_optimizer.py  performance_enhancer.py
jabbertts/preprocessing/: enhanced_text_processor.py
jabbertts/processing/: parallel_engine.py
jabbertts/scripts/: audio_pipeline_investigation.py  audio_quality_diagnostic.py  comprehensive_audio_quality_validation.py  comprehensive_validation.py  debug_phonemization.py  fix_speaker_embeddings.py  fix_speecht5_preprocessing.py  generate_reference_audio.py  investigate_model_checkpoint.py  investigate_model_configuration.py  quick_audio_quality_test.py  reference_implementation_analysis.py  technical_root_cause_analysis.py  test_audio_analysis.py  test_minimal_processing.py  test_phonemization_fix.py  test_without_compilation.py  validate_intelligibility_framework.py  validate_perceptual_quality.py
jabbertts/streaming/: realtime_synthesis.py
jabbertts/synthesis/: enhanced_controls.py
jabbertts/validation/: __init__.py  audio_quality.py  metrics.py  quality_assessor.py  self_debugger.py  test_suite.py  whisper_validator.py
jabbertts/voice_cloning/: __init__.py  advanced_cloning_engine.py  cloning_engine.py  embedding_extractor.py  routes.py  studio_interface.py  voice_library.py  voice_modulator.py
jabbertts/voice_cloning/templates/: studio.html
performance_audit_results/: audit_summary_20250905_222156.md  performance_audit_20250905_222156.json
phonemization_stuttering_test/: PHONEMIZATION_STUTTERING_SUMMARY.md  phonemization_stuttering_results.json
quality_fix_validation/: QUALITY_FIX_VALIDATION_SUMMARY.md  quality_fix_validation_results.json
reference_audio_samples/: reference_generation_results_20250905_235038.json  reference_generation_results_20250905_235251.json  reference_generation_results_20250905_235452.json
research/: Hardware_Compatibility_Assessment.md  TTS_Comparative_Analysis_2025.md
stuttering_investigation/: STUTTERING_INVESTIGATION_SUMMARY.md  stuttering_investigation_results.json
tests/: __init__.py  test_audio.py  test_basic.py  test_inference.py  test_intelligibility.py  test_models.py  test_perceptual_quality.py
torch_compile_stuttering_test/: TORCH_COMPILE_STUTTERING_SUMMARY.md  torch_compile_stuttering_results.json
